k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arrienda-front
  namespace: front
spec:
  selector:
    matchLabels:
      app: arrienda-front
  replicas: 1
  template:
    metadata:
      labels:
        app: arrienda-front
    spec:
      imagePullSecrets:
        - name: github-secret
      containers:
        - name: arrienda
          image: localhost:5000/imagen_front
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: arrienda-front
  namespace: front
spec:
  selector:
    app: arrienda-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort  # Agregar este tipo
