k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arrienda-front-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: arriendatufinca.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: arrienda-front
            port:
              number: 80
